# fastapi-owasp-api-security-top10

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: b2310ca012a5_init_db.py
app/: .env.example  config.py  dependencies.py  initial_data.py  logging.py  main.py  middleware.py
app/api/: __init__.py  dependencies.py  deps.py  exception_handlers.py  middleware.py  rate_limiter.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  items.py  users.py
app/api/v1/schemas/: auth.py  common.py  item.py  user.py
app/auth/: security.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/core/security/: jwt.py  password.py
app/db/: database.py  session.py
app/db/models/: item.py  user.py
app/db/repositories/: item_repo_base.py  sqlmodel_generic_repo.py  sqlmodel_item_repo.py  sqlmodel_user_repo.py  user_repo_base.py
app/db/uow/: base.py  sqlmodel_uow.py
app/errors/: exception_handlers.py  schemas.py
app/models/: item.py  user.py
app/persistence/: database.py  session.py
app/persistence/models/: item.py  user.py
app/persistence/repositories/: generic_repo_base.py  item_repo_base.py  sqlmodel_generic_repo.py  sqlmodel_item_repo.py  sqlmodel_user_repo.py  user_repo_base.py
app/persistence/uow/: base.py  sqlmodel_uow.py
app/security/: jwt.py
app/services/: item_service.py  user_service.py  user_services.py
app/utils/: http_client.py  request_info.py  ssrf.py  time.py
scripts/: prestart.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/v1/: test_admin.py  test_auth.py  test_items.py  test_users.py
tests/api/v1/endpoints/: test_admin.py  test_auth.py  test_items.py  test_users.py
tests/integration/: conftest.py
tests/integration/persistence/repositories/: test_item_repo.py  test_user_repo.py
tests/integration/repositories/: test_item_repo.py  test_user_repo.py
tests/unit/: conftest.py
tests/unit/api/v1/schemas/: test_item_schema.py  test_user_schema.py
tests/unit/core/: test_exceptions.py
tests/unit/core/security/: test_jwt.py  test_password.py
tests/unit/schemas/: test_user_schema.py
tests/unit/services/: test_item_service.py  test_user_service.py
tests/unit/utils/: test_http_client.py  test_ssrf.py
