[project]
name = "fastapi-owasp-api-security-top10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "content-size-limit-asgi>=0.1.5",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28",
    "loguru>=0.7.3",
    "password-validator>=1.0",
    "pip-audit>=2.10.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"
include = ["app/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F","E","W","I","UP","B","C4","SIM","RET","ARG","N","D","ANN","ASYNC"
]
ignore = [
  "ANN001","ANN002",
  "E501" # formatter handles line length
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104","F401"]
"tests/**/*.py" = ["D", "ANN", "ARG"]


[tool.mypy]
python_version = "3.13"
files = ["app/**/*.py"]
strict = true
disallow_any_unimported = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
